--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ project/starter_files/CMakeFiles/
 project/starter_files/Makefile
 project/starter_files/cmake_install.cmake
 project/starter_files/spiral_planner
+*.zip
